Task/js 1057 Deprecated items HoSE (#1278)
* JS-1057 Deprecated methods

* JS-1057 Deprecated methods checkstyle

* JS-1057 Deprecated methods and items

* JS-1057 Deprecated methods and items gradle conflict

* JS-1057 Deprecated methods and items gradle conflict