@@ -93,7 +93,7 @@ class ExpensePaymentsUsingAdjustedLimitsReportTest {
         assertThat(response.getTableData().getData()).hasSize(2);
 
         StandardTableData data = response.getTableData().getData();
-        LinkedHashMap<String, Object> firstRow = data.get(0);
+        LinkedHashMap<String, Object> firstRow = data.getFirst();
 
         assertThat(firstRow.get("juror_number")).isEqualTo("123456789");
         assertThat(firstRow.get("first_name")).isEqualTo("John");
@@ -132,7 +132,7 @@ class ExpensePaymentsUsingAdjustedLimitsReportTest {
         assertThat(response.getTableData().getData()).isNotEmpty();
 
         StandardTableData data = response.getTableData().getData();
-        LinkedHashMap<String, Object> firstRow = data.get(0);
+        LinkedHashMap<String, Object> firstRow = data.getFirst();
 
         assertThat(firstRow.get("total_paid")).asString().matches("£\\d+\\.\\d{2}");
 
@@ -338,7 +338,7 @@ class ExpensePaymentsUsingAdjustedLimitsReportTest {
         StandardTableData data = response.getTableData().getData();
         assertThat(data).hasSize(1);
 
-        LinkedHashMap<String, Object> row = data.get(0);
+        LinkedHashMap<String, Object> row = data.getFirst();
         assertThat(row.get("trial_number")).isEqualTo("");
     }
 
