@@ -103,12 +103,12 @@ class PanelServiceImplTest {
 
         verify(appearanceRepository, times(1)).getAvailableJurors("415");
 
-        assertThat(getAvailableJurors.get(0).getAvailableJurors()).isEqualTo(10);
-        assertThat(getAvailableJurors.get(0).getCourtLocationCode()).isEqualTo("415");
-        assertThat(getAvailableJurors.get(0).getCourtLocation()).isEqualTo("Chester");
-        assertThat(getAvailableJurors.get(0).getServiceStartDate())
+        assertThat(getAvailableJurors.getFirst().getAvailableJurors()).isEqualTo(10);
+        assertThat(getAvailableJurors.getFirst().getCourtLocationCode()).isEqualTo("415");
+        assertThat(getAvailableJurors.getFirst().getCourtLocation()).isEqualTo("Chester");
+        assertThat(getAvailableJurors.getFirst().getServiceStartDate())
             .isEqualTo(now());
-        assertThat(getAvailableJurors.get(0).getPoolNumber()).isEqualTo("111111111");
+        assertThat(getAvailableJurors.getFirst().getPoolNumber()).isEqualTo("111111111");
     }
 
     @Test
@@ -131,7 +131,7 @@ class PanelServiceImplTest {
         doReturn(createJurorPool(jurorNumbers, "415231201")).when(appearanceRepository)
             .retrieveAllJurors(locCode, date);
 
-        doReturn(createJurorPool(jurorNumbers, poolNumbers.get(0))).when(appearanceRepository)
+        doReturn(createJurorPool(jurorNumbers, poolNumbers.getFirst())).when(appearanceRepository)
             .getJurorsInPools(locCode, poolNumbers, date);
         doReturn(Optional.of(createAppearance("121212121"))).when(appearanceRepository)
             .findByCourtLocationLocCodeAndJurorNumberAndAttendanceDate(locCode, "121212121", now());
@@ -152,9 +152,9 @@ class PanelServiceImplTest {
         verify(appearanceRepository, never()).retrieveAllJurors(locCode, date);
         verify(panelRepository, times(2)).saveAndFlush(any());
         assertThat(dtoList).as("Expected size to be two").hasSize(2);
-        assertThat(dtoList.get(0).getFirstName()).as("Expected first name to be FNAME").isEqualTo("FNAME");
-        assertThat(dtoList.get(0).getLastName()).as("Expected first name to be LNAME").isEqualTo("LNAME");
-        assertThat(dtoList.get(0).getJurorStatus()).as("Expected status to be Panelled").isEqualTo("Panelled");
+        assertThat(dtoList.getFirst().getFirstName()).as("Expected first name to be FNAME").isEqualTo("FNAME");
+        assertThat(dtoList.getFirst().getLastName()).as("Expected first name to be LNAME").isEqualTo("LNAME");
+        assertThat(dtoList.getFirst().getJurorStatus()).as("Expected status to be Panelled").isEqualTo("Panelled");
 
     }
 
@@ -189,9 +189,9 @@ class PanelServiceImplTest {
         verify(appearanceRepository, times(1)).retrieveAllJurors(locCode, date);
         verify(panelRepository, times(2)).saveAndFlush(any());
         assertThat(dtoList).as("Expected size to be two").hasSize(2);
-        assertThat(dtoList.get(0).getFirstName()).as("Expected first name to be FNAME").isEqualTo("FNAME");
-        assertThat(dtoList.get(0).getLastName()).as("Expected first name to be LNAME").isEqualTo("LNAME");
-        assertThat(dtoList.get(0).getJurorStatus()).as("Expected status to be Panelled").isEqualTo("Panelled");
+        assertThat(dtoList.getFirst().getFirstName()).as("Expected first name to be FNAME").isEqualTo("FNAME");
+        assertThat(dtoList.getFirst().getLastName()).as("Expected first name to be LNAME").isEqualTo("LNAME");
+        assertThat(dtoList.getFirst().getJurorStatus()).as("Expected status to be Panelled").isEqualTo("Panelled");
 
     }
 
@@ -229,9 +229,9 @@ class PanelServiceImplTest {
         verify(appearanceRepository, times(1)).retrieveAllJurors(locCode, date);
         verify(panelRepository, times(2)).saveAndFlush(any());
         assertThat(dtoList).as("Expected size to be two").hasSize(2);
-        assertThat(dtoList.get(0).getFirstName()).as("Expected first name to be FNAME").isEqualTo("FNAME");
-        assertThat(dtoList.get(0).getLastName()).as("Expected first name to be LNAME").isEqualTo("LNAME");
-        assertThat(dtoList.get(0).getJurorStatus()).as("Expected status to be Panelled").isEqualTo("Panelled");
+        assertThat(dtoList.getFirst().getFirstName()).as("Expected first name to be FNAME").isEqualTo("FNAME");
+        assertThat(dtoList.getFirst().getLastName()).as("Expected first name to be LNAME").isEqualTo("LNAME");
+        assertThat(dtoList.getFirst().getJurorStatus()).as("Expected status to be Panelled").isEqualTo("Panelled");
     }
 
     @Test
@@ -395,9 +395,9 @@ class PanelServiceImplTest {
         verify(panelRepository, times(1))
             .findByTrialTrialNumberAndTrialCourtLocationLocCode("T100000025", "415");
 
-        assertThat(empanelListDtoCall.getEmpanelList().get(0).getFirstName()).isEqualTo("FNAME");
-        assertThat(empanelListDtoCall.getEmpanelList().get(0).getLastName()).isEqualTo("LNAME");
-        assertThat(empanelListDtoCall.getEmpanelList().get(0).getStatus()).isNull();
+        assertThat(empanelListDtoCall.getEmpanelList().getFirst().getFirstName()).isEqualTo("FNAME");
+        assertThat(empanelListDtoCall.getEmpanelList().getFirst().getLastName()).isEqualTo("LNAME");
+        assertThat(empanelListDtoCall.getEmpanelList().getFirst().getStatus()).isNull();
 
     }
 
@@ -597,7 +597,7 @@ class PanelServiceImplTest {
 
         List<PanelListDto> dtoList = panelService.getJurySummary("T11111111", "415");
         assertThat(dtoList).as("Expected size to be 1").hasSize(1);
-        assertThat(dtoList.get(0).getJurorStatus()).as("Expected status to be Juror")
+        assertThat(dtoList.getFirst().getJurorStatus()).as("Expected status to be Juror")
             .isEqualTo("Juror");
     }
 
