@@ -660,7 +660,7 @@ class LetterBaseTest {
         verify(letterDataType, times(1)).validateContext(eq(context));
 
         assertThat(letterBase.getData()).hasSize(1);
-        LetterBase.ILetterData actualLetterDataShuffle = letterBase.getData().get(0);
+        LetterBase.ILetterData actualLetterDataShuffle = letterBase.getData().getFirst();
 
         assertThat(actualLetterDataShuffle).isNotNull();
         assertThat(actualLetterDataShuffle.getLength()).isEqualTo(10);
@@ -691,7 +691,7 @@ class LetterBaseTest {
         verify(letterDataType3, times(1)).validateContext(eq(context));
 
         assertThat(letterBase.getData()).hasSize(1);
-        LetterBase.ILetterData actualLetterDataShuffle = letterBase.getData().get(0);
+        LetterBase.ILetterData actualLetterDataShuffle = letterBase.getData().getFirst();
 
         assertThat(actualLetterDataShuffle).isNotNull();
         assertThat(actualLetterDataShuffle.getLength()).isEqualTo(45);
@@ -722,7 +722,7 @@ class LetterBaseTest {
         verify(letterDataType3, times(1)).validateContext(eq(context));
 
         assertThat(letterBase.getData()).hasSize(1);
-        LetterBase.ILetterData actualLetterDataShuffle = letterBase.getData().get(0);
+        LetterBase.ILetterData actualLetterDataShuffle = letterBase.getData().getFirst();
 
         assertThat(actualLetterDataShuffle).isNotNull();
         assertThat(actualLetterDataShuffle.getLength()).isEqualTo(45);
@@ -753,7 +753,7 @@ class LetterBaseTest {
         verify(letterDataType3, times(1)).validateContext(eq(context));
 
         assertThat(letterBase.getData()).hasSize(1);
-        LetterBase.ILetterData actualLetterDataShuffle = letterBase.getData().get(0);
+        LetterBase.ILetterData actualLetterDataShuffle = letterBase.getData().getFirst();
 
         assertThat(actualLetterDataShuffle).isNotNull();
         assertThat(actualLetterDataShuffle.getLength()).isEqualTo(45);
@@ -785,7 +785,7 @@ class LetterBaseTest {
         verify(letterDataType3, times(1)).validateContext(eq(context));
 
         assertThat(letterBase.getData()).hasSize(1);
-        LetterBase.ILetterData actualLetterDataShuffle = letterBase.getData().get(0);
+        LetterBase.ILetterData actualLetterDataShuffle = letterBase.getData().getFirst();
 
         assertThat(actualLetterDataShuffle).isNotNull();
         assertThat(actualLetterDataShuffle.getLength()).isEqualTo(45);
@@ -817,7 +817,7 @@ class LetterBaseTest {
         verify(letterDataType3, times(1)).validateContext(eq(context));
 
         assertThat(letterBase.getData()).hasSize(1);
-        LetterBase.ILetterData actualLetterDataShuffle = letterBase.getData().get(0);
+        LetterBase.ILetterData actualLetterDataShuffle = letterBase.getData().getFirst();
 
         assertThat(actualLetterDataShuffle).isNotNull();
         assertThat(actualLetterDataShuffle.getLength()).isEqualTo(45);
